Update TWF & html

--- a/manifest.json
+++ b/manifest.json
@@ -1,75 +1,116 @@
 {
-    "name": "The Ark Bible",
-    "short_name": "Ark Bible",
-    "description": "Searchable Bible App",
-    "start_url": "/index.html",
-    "display": "fullscreen",
-    "background_color": "#ffffff",
-    "theme_color": "#022a69",
-    "icons": [
-        {
-            "src": "/TAB-Test/images/icons/ark-32.png",
-            "sizes": "32x32", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/ark-64.png",
-            "sizes": "96x96", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/ark-96.png",
-            "sizes": "96x96", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/ark-128.png",
-            "sizes": "128x128", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/ark-192.png",
-            "sizes": "192x192", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/logo-192.png",
-            "sizes": "192x192", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/ark-256.png",
-            "sizes": "256x256", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/ark-300.png",
-            "sizes": "300x300", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/ark-512.png",
-            "sizes": "512x512", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/ark-600.png",
-            "sizes": "600x600", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/ark-900.png",
-            "sizes": "900x900", "type": "image/png", "rel": "shortcut icon"
-        },
-        {
-            "src": "/TAB-Test/images/icons/ark-1024.png",
-            "sizes": "1024x1024", "type": "image/png", "rel": "shortcut icon"
-        }
-    ],
-    "screenshots": [
-        {
-            "src": "/TAB-Test/images/screenshots/laptop.png",
-            "sizes": "755x503",
-            "type": "image/png",
-            "form_factor": "wide",
-            "label": "Laptop Screen"
-        },
-        {
-            "src": "/TAB-Test/images/screenshots/moto-432.png",
-            "sizes": "320x610",
-            "type": "image/png",
-            "label": "Moto-432 Screen"
-        }
-    ]
+     "name": "The Ark Bible",
+     "short_name": "Ark Bible",
+     "description": "The Ark Bible App is an online searchable Bible App. It offers many different versions of the Bible in many different languages. It also offers other functionality, including a 365 day chronological reading plan, a computer text to speech synthesis to listen, so you can listen to the Bible, and a comparison function, so you can compare two different versions of the Bible on the same page.",
+     "start_url": "/index.html",
+     "display": "fullscreen",
+     "background_color": "#ffffff",
+     "theme_color": "#022a69",
+     "icons": [
+          {
+               "src": "/TAB-Test/images/crystal.png",
+               "sizes": "1200x100",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/apple-touch-icon.png",
+               "sizes": "180x180",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-32.png",
+               "sizes": "32x32",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-64.png",
+               "sizes": "96x96",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-96.png",
+               "sizes": "96x96",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-128.png",
+               "sizes": "128x128",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-192.png",
+               "sizes": "192x192",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-256.png",
+               "sizes": "256x256",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-300.png",
+               "sizes": "300x300",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-512.png",
+               "sizes": "512x512",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-600.png",
+               "sizes": "600x600",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-900.png",
+               "sizes": "900x900",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/ark-1024.png",
+               "sizes": "1024x1024",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/logo-192.png",
+               "sizes": "192x192",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          },
+          {
+               "src": "/TAB-Test/images/icons/qr-logo.png",
+               "sizes": "512x512",
+               "type": "image/png",
+               "rel": "shortcut icon"
+          }
+     ],
+     "screenshots": [
+          {
+               "src": "/TAB-Test/images/screenshots/laptop.png",
+               "sizes": "755x503",
+               "type": "image/png",
+               "form_factor": "wide",
+               "label": "Laptop Screen"
+          },
+          {
+               "src": "/TAB-Test/images/screenshots/moto-432.png",
+               "sizes": "320x610",
+               "type": "image/png",
+               "label": "Moto-432 Screen"
+          }
+     ]
 }
-
